# calishot

./: .gitignore  installation.md  pyproject.toml  sqlite_queries.txt
calishot/: calishot.py  calistat.py  search_shodan.py
